Added perfomance and luxury sections

--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="src/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@700&display=swap"
         rel="stylesheet">
-    
+    <link rel="stylesheet" href="src/css/style.css">
     <title>Airplane tickets</title>
 </head>
 
@@ -56,7 +55,7 @@
                     <h2 class="intro__subtitle"> Overhead bin space</h2>
                     <a href="" class="intro__link">
                         <div class="intro__explore">Explore Now</div>
-                        <i class="fa-solid fa-arrow-right intro__arrow"></i>
+                        <img src="src/img/icons/arrow-right.svg" class="intro__arrow" alt="">
                     </a>
                 </div>
             </div>
@@ -112,7 +111,7 @@
                             <div class="booking__airport">Los Angeles Intl Arpt,Los Angeles</div>
                         </div>
                         <div class="booking__reverse">
-                            <i class="fa-solid fa-arrow-right-arrow-left booking__revert"></i>
+                            <img src="src/img/icons/arrow-right-arrow-left-solid.svg" class="booking__revert" alt="">
                         </div>
                         <div class="booking__destination">
                             <div class="booking__title">to</div>
@@ -123,7 +122,7 @@
                             <div class="booking__departure">
                                 <div class="booking__title">departure</div>
                                 <div class="booking__date">Fri 15 Oct</div>
-                                <i class="fa-regular fa-calendar booking__calendar"></i>
+                                <img src="src/img/icons/calendar.svg" class=" booking__calendar" alt="">
                                 <div class="booking__buttons">
                                     <span class="booking__btn">Prev</span>
                                     <span class="booking__btn">Next</span>
@@ -132,7 +131,7 @@
                             <div class="booking__return">
                                 <div class="booking__title">return</div>
                                 <div class="booking__date">Tue 19 Oct</div>
-                                <i class="fa-regular fa-calendar booking__calendar"></i>
+                                <img src="src/img/icons/calendar.svg" class=" booking__calendar" alt="">
                                 <div class="booking__buttons">
                                     <span class="booking__btn">Prev</span>
                                     <span class="booking__btn">Next</span>
@@ -141,7 +140,7 @@
                         </div>
                     </div>
                     <div class="booking__footer">
-                        Add Requirements
+                        <span class="booking__footer-text"> Add Requirements </span>
                     </div>
                     <button class="booking__button">Book Flights <img src="src/img/icons/arrow-right-white.svg"
                             alt="arrow" class="white-arrow"></button>
@@ -149,8 +148,130 @@
                 </div>
             </div>
         </div>
+        <!-- !Booking -->
+
+        <section class="section section-chapter">
+            <div class="container">
+                <div class="section__header">
+                    <h2 class="section__title">Private Jet Performance and Specifications</h2>
+                </div>
+                <div class="chapter">
+                    <div class="chapter__item">
+                        <img src="src/img/private-jet.png" alt="private-jet" class="chapter__img">
+                        <div class="chapter__content">
+                            <div class="chapter__title">Private Jet Charter</div>
+                            <div class="chapter__text">It is a long established fact that a reader will be distracted by
+                                the readable content of a page when looking at its layout. The point of using Lorem
+                                Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using
+                                'Content here, content here', making it look like readable English. Many desktop
+                                publishing packages and web page editors</div>
+                        </div>
+
+                    </div>
+                    <div class="chapter__item">
+                        <div class="chapter__content">
+                            <div class="chapter__title">Private Jet Charter</div>
+                            <div class="chapter__text">It is a long established fact that a reader will be distracted by
+                                the readable content of a page when looking at its layout. The point of using Lorem
+                                Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using
+                                'Content here, content here', making it look like readable English. Many desktop
+                                publishing packages and web page editors</div>
+                        </div>
+                        <img src="src/img/business-jet.png" alt="private-jet" class="chapter__img">
+                    </div>
+
+                    <div class="chapter__rectange chapter__rectange-left"></div>
+                    <div class="chapter__rectange chapter__rectange-right"></div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section">
+            <div class="container">
+                <div class="section__header">
+                    <h2 class="section__title">
+                        Private Jet Performance and Specifications
+                    </h2>
+                </div>
+                <div class="perfomance">
+                    <div class="perfomance__inner">
+                        <div class="perfomance__col">
+                            <div class="perfomance__card">
+                                <img src="src/img/icons/seat.svg" class="perfomance__icon" alt="">
+                                <div class="perfomance__title">Luxury And Comfort</div>
+                                <div class="perfomance__text">It is a long established fact that a reader will be
+                                    distracted by the readable</div>
+                            </div>
+                            <div class="perfomance__card">
+                                <img src="src/img/icons/seat.svg" class="perfomance__icon" alt="">
+                                <div class="perfomance__title">Luxury And Comfort</div>
+                                <div class="perfomance__text">It is a long established fact that a reader will be
+                                    distracted by the readable</div>
+                            </div>
+                        </div>
+                        <div class="perfomance__col">
+                            <div class="perfomance__airplane">
+                                <img src="src/img/icons/plane.png" alt="plane">
+                            </div>
+                        </div>
+                        <div class="perfomance__col">
+                            <div class="perfomance__card">
+                                <img src="src/img/icons/seat.svg" class="perfomance__icon" alt="">
+                                <div class="perfomance__title">Luxury And Comfort</div>
+                                <div class="perfomance__text">It is a long established fact that a reader will be
+                                    distracted by the readable</div>
+                            </div>
+                            <div class="perfomance__card">
+                                <img src="src/img/icons/seat.svg" class="perfomance__icon" alt="">
+                                <div class="perfomance__title">Luxury And Comfort</div>
+                                <div class="perfomance__text">It is a long established fact that a reader will be
+                                    distracted by the readable</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section">
+            <div class="container">
+                <div class="section__header">
+                    <h2 class="section__title">
+                        Luxury Charters
+                    </h2>
+                </div>
+
+                <div class="luxury">
+                    <div class="luxury__card">
+                        <img src="src/img/planes/plane-1.jpg" alt="" class="luxury__image">
+                        <div class="luxury__model">Piaggio P.180 Avanti</div>
+                    </div>
+                    <div class="luxury__card">
+                        <img src="src/img/planes/plane_2.jpg" alt="" class="luxury__image">
+                        <div class="luxury__model">Pilatus PC-12</div>
+                    </div>
+                    <div class="luxury__card">
+                        <img src="src/img/planes/plane_3.jpg" alt="" class="luxury__image">
+                        <div class="luxury__model">piper pa27 aztec</div>
+                    </div>
+                    <div class="luxury__card">
+                        <img src="src/img/planes/plane_4.jpg" alt="" class="luxury__image">
+                        <div class="luxury__model">Beech BE100 King Air</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section">
+            <div class="container">
+                <div class="section__header">
+                    <h2 class="section__title">
+                        Enjoy our membership
+                    </h2>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
-<script src="https://kit.fontawesome.com/22da4557de.js" crossorigin="anonymous"></script>
 
 </html>
