--- a/index.html
+++ b/index.html
@@ -269,8 +269,176 @@
                         Enjoy our membership
                     </h2>
                 </div>
+
+                <div class="membership">
+                    <div class="membership__card">
+                        <div class="membership__header">
+                            <h3 class="membership__type">
+                                Popular
+                            </h3>
+                        </div>
+                        <div class="membership__body">
+                            <div class="membership__get">What You’ll Get</div>
+                            <ul class="membership__features">
+                                <li class="membership__features-item">
+                                    <img src="src/img/icons/checkbox.svg" class="membership__checkbox" alt="">
+                                    <div class="membership__features-desc">
+                                        One-time initiation free $0
+                                    </div>
+                                </li>
+                                <li class="membership__features-item">
+                                    <img src="src/img/icons/checkbox.svg" class="membership__checkbox" alt="">
+                                    <div class="membership__features-desc">
+                                        Deposit $50k
+                                    </div>
+                                </li>
+                                <li class="membership__features-item">
+                                    <img src="src/img/icons/checkbox.svg" class="membership__checkbox" alt="">
+                                    <div class="membership__features-desc">
+                                        Pricing / rates Dynamic
+                                    </div>
+                                </li>
+                                <li class="membership__features-item">
+                                    <img src="src/img/icons/checkbox.svg" class="membership__checkbox" alt="">
+                                    <div class="membership__features-desc">
+                                        Priority fleet access Yes
+                                    </div>
+                                </li>
+                                <li class="membership__features-item">
+                                    <img src="src/img/icons/checkbox.svg" class="membership__checkbox" alt="">
+                                    <div class="membership__features-desc">
+                                        Guaranteed fleet access No
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="membership__footer">
+                            <div class="membership__cost"><b>$250</b>/month</div>
+                            <button class="membership__button">Choose</button>
+                        </div>
+                    </div>
+                    <div class="membership__card">
+                        <div class="membership__header">
+                            <h3 class="membership__type">
+                                Popular
+                            </h3>
+                        </div>
+                        <div class="membership__body">
+                            <div class="membership__get">What You’ll Get</div>
+                            <ul class="membership__features">
+                                <li class="membership__features-item">
+                                    <img src="src/img/icons/checkbox.svg" class="membership__checkbox" alt="">
+                                    <div class="membership__features-desc">
+                                        One-time initiation free $0
+                                    </div>
+                                </li>
+                                <li class="membership__features-item">
+                                    <img src="src/img/icons/checkbox.svg" class="membership__checkbox" alt="">
+                                    <div class="membership__features-desc">
+                                        Deposit $50k
+                                    </div>
+                                </li>
+                                <li class="membership__features-item">
+                                    <img src="src/img/icons/checkbox.svg" class="membership__checkbox" alt="">
+                                    <div class="membership__features-desc">
+                                        Pricing / rates Dynamic
+                                    </div>
+                                </li>
+                                <li class="membership__features-item">
+                                    <img src="src/img/icons/checkbox.svg" class="membership__checkbox" alt="">
+                                    <div class="membership__features-desc">
+                                        Priority fleet access Yes
+                                    </div>
+                                </li>
+                                <li class="membership__features-item">
+                                    <img src="src/img/icons/checkbox.svg" class="membership__checkbox" alt="">
+                                    <div class="membership__features-desc">
+                                        Guaranteed fleet access No
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="membership__footer">
+                            <div class="membership__cost"><b>$250</b>/month</div>
+                            <button class="membership__button">Choose</button>
+                        </div>
+                    </div>
+                    <div class="membership__card">
+                        <div class="membership__header">
+                            <h3 class="membership__type">
+                                Popular
+                            </h3>
+                        </div>
+                        <div class="membership__body">
+                            <div class="membership__get">What You’ll Get</div>
+                            <ul class="membership__features">
+                                <li class="membership__features-item">
+                                    <img src="src/img/icons/checkbox.svg" class="membership__checkbox" alt="">
+                                    <div class="membership__features-desc">
+                                        One-time initiation free $0
+                                    </div>
+                                </li>
+                                <li class="membership__features-item">
+                                    <img src="src/img/icons/checkbox.svg" class="membership__checkbox" alt="">
+                                    <div class="membership__features-desc">
+                                        Deposit $50k
+                                    </div>
+                                </li>
+                                <li class="membership__features-item">
+                                    <img src="src/img/icons/checkbox.svg" class="membership__checkbox" alt="">
+                                    <div class="membership__features-desc">
+                                        Pricing / rates Dynamic
+                                    </div>
+                                </li>
+                                <li class="membership__features-item">
+                                    <img src="src/img/icons/checkbox.svg" class="membership__checkbox" alt="">
+                                    <div class="membership__features-desc">
+                                        Priority fleet access Yes
+                                    </div>
+                                </li>
+                                <li class="membership__features-item">
+                                    <img src="src/img/icons/checkbox.svg" class="membership__checkbox" alt="">
+                                    <div class="membership__features-desc">
+                                        Guaranteed fleet access No
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="membership__footer">
+                            <div class="membership__cost"><b>$250</b>/month</div>
+                            <button class="membership__button">Choose</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
+
+        <div class="container">
+            <img src="src/img/plane-large.svg" alt="plane" class="large__plain">
+        </div>
+
+        <footer class="footer">
+            <div class="container">
+                <img src="src/img/Logo-white.svg" class="footer__logo" alt="">
+                <div class="footer__about">
+                    <ul class="footer__services">
+                        <li class="footer__service">
+                            <a href="#" class="footer__service-link">services</a>
+                        </li>
+                        <li class="footer__service">
+                            <a href="#" class="footer__service-link">about us</a>
+                        </li>
+                        <li class="footer__service">
+                            <a href="#" class="footer__service-link">news</a>
+                        </li>
+                        <li class="footer__service">
+                            <a href="#" class="footer__service-link">contact</a>
+                        </li>
+                    </ul>
+                    <div class="footer__rights">© 2021 Air. All rights reserved.</div>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 
