Added data-src for lazy loading

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <nav class="header__navbar">
                         <div class="header__logo">
                             <a href="#">
-                                <img src="src//img/Logo.svg" alt="logos">
+                                <img src="src/img/Logo.svg" alt="logos">
                             </a>
                         </div>
                         <ul class="header__links">
@@ -157,7 +157,8 @@
                 </div>
                 <div class="chapter">
                     <div class="chapter__item">
-                        <img src="src/img/private-jet.png" alt="private-jet" class="chapter__img">
+                        <img data-src="src/img/private-jet.jpg" src="src/img/output-onlinepngtools.png"
+                            alt="private-jet" class="chapter__img">
                         <div class="chapter__content">
                             <div class="chapter__title">Private Jet Charter</div>
                             <div class="chapter__text">It is a long established fact that a reader will be distracted by
@@ -177,7 +178,8 @@
                                 'Content here, content here', making it look like readable English. Many desktop
                                 publishing packages and web page editors</div>
                         </div>
-                        <img src="src/img/business-jet.png" alt="private-jet" class="chapter__img">
+                        <img data-src="src/img/business-jet.jpg" src="src/img/output-onlinepngtools.png"
+                            alt="private-jet" class="chapter__img">
                     </div>
 
                     <div class="chapter__rectange chapter__rectange-left"></div>
@@ -274,25 +276,29 @@
                 <div class="luxury">
 
                     <div class="luxury__card">
-                        <img src="src/img/planes/plane_1.jpg" alt="" class="luxury__image">
+                        <img data-src="src/img/planes/plane_1.jpg" src="src/img/output-onlinepngtools.png" alt=""
+                            class="luxury__image">
                         <div class="luxury__info">
                             Piaggio P.180 Avanti
                         </div>
                     </div>
                     <div class="luxury__card">
-                        <img src="src/img/planes/plane_2.jpg" alt="" class="luxury__image">
+                        <img data-src="src/img/planes/plane_2.jpg" src="src/img/output-onlinepngtools.png" alt=""
+                            class="luxury__image">
                         <div class="luxury__info">
                             Pilatus PC-12
                         </div>
                     </div>
                     <div class="luxury__card">
-                        <img src="src/img/planes/plane_3.jpg" alt="" class="luxury__image">
+                        <img data-src="src/img/planes/plane_3.jpg" src="src/img/output-onlinepngtools.png" alt=""
+                            class="luxury__image">
                         <div class="luxury__info">
                             piper pa-27 aztec
                         </div>
                     </div>
                     <div class="luxury__card">
-                        <img src="src/img/planes/Plane_4.jpg" alt="" class="luxury__image">
+                        <img data-src="src/img/planes/Plane_4.jpg" src="src/img/output-onlinepngtools.png" alt=""
+                            class="luxury__image">
                         <div class="luxury__info">
                             Beech BE 100 King Air
                         </div>
@@ -474,11 +480,12 @@
                             <a href="#" class="footer__service-link">contact</a>
                         </li>
                     </ul>
-                    <div class="footer__rights">© 2021 Air. All rights reserved.</div>
+                    <div class="footer__rights">© 2022 Air. All rights reserved.</div>
                 </div>
             </div>
         </footer>
     </div>
 </body>
+<script src="src/js/app.js"></script>
 
 </html>
