Fixed script src

--- a/index.html
+++ b/index.html
@@ -518,6 +518,6 @@
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.2.0/dist/js/datepicker-full.min.js"></script>
-<script type="module" src="src/js/app.js"></script>
+<script src="src/js/app.js"></script>
 
 </html>
